# concepted

./: README  concepted.cabal  concepted.hs  my-state.txt  state.txt
Concepted/: Core.hs  Graphics.hs  Misc.hs  Plane.hs  State.hs  Widget.hs  Zombies.hs
Concepted/Syntax/: Parser.hs  Pretty.hs
